--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -718,8 +718,8 @@
       "price": "Giá trên mỗi Kg / Đơn vị (VND)",
       "price_placeholder": "Nhập giá...",
       "start_date": "Ngày bắt đầu nhận đơn",
-      "end_date": "Ngày kết thúc nhận đơn",
-      "due_date": "Hạn chót hoàn thành đơn",
+      "end_date": "Ngày kết thúc nhận",
+      "due_date": "Hạn chót hoàn thành",
       "date_placeholder": "Chọn ngày",
       "priority": "Mức độ ưu tiên",
       "priority_placeholder": "Chọn mức độ ưu tiên",
