--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -91,6 +91,17 @@
   "choose_gender": "Please select your gender.",
   "must_be_18_years_old": "You must be at least 18 years old.",
   "invalid_phone": "Invalid phone number. It must start with 0 and contain exactly 10 digits.",
+  "updateSuccess": "Update successful.",
+  "updateError": "Update failed.",
+  "otpSent": "OTP has been sent!",
+  "otpSendFail": "Unable to send OTP.",
+  "otpSendFailRetry": "Unable to send OTP. Please try again.",
+  "invalidOtp": "Please enter a valid OTP before proceeding.",
+  "fieldsRequired": "Fields cannot be empty.",
+  "passwordMismatch": "Passwords do not match.",
+  "passwordSameAsOld": "New password must not be the same as the old password.",
+  "passwordChangedSuccess": "Password changed successfully.",
+  "emailNotExist": "Email does not exist.",
   "carousel": {
     "view_more": "View more",
     "title_2": "CAREFUL SELECTION",
