--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -88,6 +88,17 @@
   "fill_all_fields": "Vui lòng điền đầy đủ thông tin.",
   "choose_gender": "Vui lòng chọn giới tính.",
   "must_be_18_years_old": "Bạn phải từ 18 tuổi trở lên.",
+  "updateSuccess": "Cập nhật thành công.",
+  "updateError": "Cập nhật thất bại.",
+  "otpSent": "OTP đã được gửi!",
+  "otpSendFail": "Không thể gửi OTP.",
+  "otpSendFailRetry": "Không thể gửi OTP. Vui lòng thử lại.",
+  "invalidOtp": "Vui lòng nhập mã OTP hợp lệ trước khi tiếp tục.",
+  "fieldsRequired": "Các trường thông tin không được để trống.",
+  "passwordMismatch": "Mật khẩu không trùng khớp",
+  "passwordSameAsOld": "Mật khẩu mới không được trùng với mật khẩu cũ",
+  "passwordChangedSuccess": "Thay đổi mật khẩu thành công.",
+  "emailNotExist": "Email không tồn tại",
   "carousel": {
     "view_more": "Xem thêm",
     "title_2": "TUYỂN CHỌN KỸ CÀNG",
