Fix create material collection request fe

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -195,14 +195,14 @@
     "copyright": "Greensupply.com.vn"
   },
   "sidebar": {
-    "created_orders": "Created Orders",
-    "harvest_orders": "Harvest Orders",
-    "provide_orders": "Provide Orders",
-    "create_harvest_request": "Create Material collection request",
-    "create_provide_order": "Create Provide Order",
-    "order_history": "Order History",
-    "history_harvest": "Material collection request History",
-    "history_provide": "Provide Order History",
+    "created_orders": "Created requests",
+    "harvest_orders": "Material Collection Requests",
+    "provide_orders": "Material Provide Requests",
+    "create_harvest_request": "Create Material Collection",
+    "create_provide_order": "Create Material Provide",
+    "order_history": "Request History",
+    "history_harvest": "Material collection history",
+    "history_provide": "Material provide history",
     "track_shipment": "Track Shipment",
     "adminTitle": "ADMIN",
     "dashboard": "Dashboard",
@@ -212,7 +212,7 @@
     "footer": "minhduc.lmd Dev"
   },
   "harvestRequest": {
-    "title": "Material collection request FORM",
+    "title": "Material Collection Request",
     "edit_title": "Edit Material collection request",
     "detail_title": "Material collection request Details",
     "name": "Request Name",
@@ -237,18 +237,18 @@
     "no_data": "No data available.",
     "delete": "Delete",
     "detail": "Detail",
-    "create_request_title": "Create Material collection request",
-    "request_name": "Request Name",
+    "create_request_title": "Create Material Collection Request",
+    "request_name": "Request name",
     "request_name_placeholder": "Enter request name...",
-    "material_type": "Material Type",
+    "material_type": "Material type",
     "material_type_placeholder": "Select material type",
     "quantity_placeholder": "Enter quantity...",
     "price_placeholder": "Enter price...",
-    "pickup_address": "Pickup Address",
+    "pickup_address": "Pickup address",
     "enter_pickup_address": "Enter address...",
     "no_address": "No address available",
     "note_placeholder": "Note (max 200 characters)",
-    "total_price_label": "Total Price:",
+    "total_price_label": "Total price:",
     "submit_button": "Submit Request",
     "reset_button": "Reset",
     "invalid_request_name": "Request name must only contain letters, numbers, and spaces!",
@@ -259,7 +259,11 @@
     "empty_address": "Address is required!",
     "create_success": "Material collection request created successfully!",
     "create_fail": "Failed to create request! Please try again.",
-    "invalid_address": "Address must not contain special characters!"
+    "invalid_address": "Address must not contain special characters!",
+    "request_name_min_length": "Request name must be at least 5 characters.",
+    "request_name_max_length": "Request name must not exceed 100 characters.",
+    "invalid_quantity": "Enter quantity less than 1,000,000 kg.",
+    "invalid_price": "Enter price less than 9,999,999 VND."
   },
   "status": {
     "pending": "Pending",
