--- a/src/locales/vi/translation.json
+++ b/src/locales/vi/translation.json
@@ -17,7 +17,7 @@
   "resend_after": "Gửi lại sau {{count}}s",
   "resend": "Gửi lại",
   "slogan": "Giải pháp hiệu quả dành cho nông sản của bạn",
-  "copyright": "@2025 bản quyền thuộc về Green supply",
+  "copyright": "@2025 bản quyền thuộc về Mangovate",
   "not_receive_code": "Không nhận được mã?",
   "login_success": "Đăng nhập thành công!",
   "login_fail": "Đăng nhập thất bại.",
@@ -101,15 +101,21 @@
   "emailNotExist": "Email không tồn tại",
   "carousel": {
     "view_more": "Xem thêm",
-    "title_2": "TUYỂN CHỌN KỸ CÀNG",
-    "desc_1": "Nền tảng quản lý chuỗi cung ứng xoài thông minh, minh bạch và bền vững, giúp kết nối từ nông trại đến tay người tiêu dùng một cách hiệu quả.",
-    "desc_2": "Được lựa chọn từ những trái xoài to nhất, có độ chín đều ngon ngọt để cho ra thị trường Việt Nam và xuất khẩu.",
-    "title_3": "TIÊU CHUẨN",
-    "desc_3": "Những trái xoài đều được quản lý bằng QR Code dễ dàng truy xuất được thời điểm thu hoạch và vùng trồng sản phẩm.",
-    "desc_4": "Quy trình sản xuất xanh - Kết nối với nông dân đa tỉnh thành."
+    "slide1_title": "Chào mừng đến với Mangovate",
+    "slide1_description": "Hệ thống quản lý chuỗi cung ứng xoài xấy thông minh và bền vững",
+
+    "slide2_title": "Công nghệ tiên tiến",
+    "slide2_description": "Ứng dụng AI và IoT trong quản lý sản xuất",
+
+    "slide3_title": "Giải pháp toàn diện",
+    "slide3_description": "Từ sản xuất đến phân phối, chúng tôi có giải pháp cho mọi nhu cầu",
+
+    "slide4_title": "Đối tác tin cậy",
+    "slide4_description": "Hơn 1000+ doanh nghiệp tin tưởng sử dụng"
   },
   "import_product_list": {
     "title": "Danh Sách Nguyên Liệu Cần Nhập",
+    "note": "Quản lý và theo dõi các sản phẩm cần cung cấp",
     "view_more": "Xem thêm",
     "empty": "Hiện tại chưa có đơn cần cung cấp.",
     "quantity": "Số lượng",
@@ -117,7 +123,8 @@
     "total_price": "Tổng giá",
     "remaining": "Còn lại",
     "expired": "Đã hết hạn cung cấp",
-    "create_order": "Tạo đơn"
+    "create_order": "Tạo đơn",
+    "urgent": "Gấp"
   },
   "common": {
     "days": "ngày",
@@ -176,20 +183,27 @@
     "article_3_title": "Xây dựng chuỗi giá trị xoài Việt Nam phục vụ thị trường trong nước và các thị trường xuất khẩu chủ lực"
   },
   "feature_buttons": {
-    "order_management": "QUẢN LÝ ĐƠN",
-    "harvest_request": "YÊU CẦU THU HÀNG",
-    "provide_material": "CUNG CẤP NGUYÊN LIỆU"
+    "order_management": "Quản lý đơn hàng",
+    "harvest_request": "Yêu cầu thu hàng",
+    "provide_material": "Cung cấp nguyên liệu",
+    "title": "Tính năng chính",
+    "description": "Khám phá các tính năng mạnh mẽ giúp các nhà cung ứng dễ dàng sử dụng dịch vụ",
+    "order_management_description": "Quản lý và theo dõi đơn hàng",
+    "harvest_request_description": "Tạo yêu cầu thu hàng mới",
+    "provide_material_description": "Cung cấp nguyên liệu sản xuất",
+    "need_help": "Cần hỗ trợ thêm?",
+    "contact_now": "Liên hệ ngay →"
   },
   "footer": {
     "intro": "Giới thiệu",
-    "company_name": "Công ty TNHH Green Supply",
+    "company_name": "Công ty TNHH Mangovate",
     "office": "Văn phòng",
     "address": "Địa chỉ: 120 đường Nguyễn Văn Cừ, phường Long Tuyền, quận Bình Thủy - Cần Thơ",
     "contact": "Thông tin liên lạc",
-    "email": "Email: Greensupply@gmail.com",
+    "email": "Email: Mangovate@gmail.com",
     "phone": "Điện thoại: 0976 000 000",
     "description": "Nền tảng quản lý chuỗi cung ứng xoài thông minh, minh bạch và bền vững, giúp kết nối từ nông trại đến tay người tiêu dùng một cách hiệu quả.",
-    "copyright": "Greensupply.com.vn"
+    "copyright": "Mangovate.com.vn"
   },
   "sidebar": {
     "created_orders": "Đơn Đã Tạo",
@@ -392,8 +406,8 @@
   },
   "dashboard": {
     "title": "Tổng Quan Hệ Thống",
-    "subtitle": "GreenSupply🌿",
-    "description": "Đây là trang Dashboard dành cho quản trị viên của hệ thống GreenSupply, nơi bạn có thể theo dõi và quản lý các chỉ số quan trọng trong quy trình sản xuất, tồn kho và phân phối xoài.",
+    "subtitle": "Mangovate🌿",
+    "description": "Đây là trang Dashboard dành cho quản trị viên của hệ thống Mangovate, nơi bạn có thể theo dõi và quản lý các chỉ số quan trọng trong quy trình sản xuất, tồn kho và phân phối xoài.",
     "button": {
       "createPurchase": "Tạo yêu cầu cung cấp",
       "createProduction": "Tạo yêu cầu sản xuất",
