Fix Supplier FE

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -226,8 +226,8 @@
     "footer": "minhduc.lmd Dev"
   },
   "harvestRequest": {
-    "title": "Material Collection Requests",
-    "edit_title": "Edit Material collection request",
+    "title": "MATERIAL COLLECTION REQUESTS",
+    "edit_title": "Update Material collection request",
     "detail_title": "Material collection request Details",
     "name": "Request Name",
     "quantity": "Quantity (kg)",
@@ -237,13 +237,14 @@
     "note": "Note",
     "note_limit": "Note (maximum 200 characters)",
     "status": "Status",
-    "total_price_display": "Total Price:",
+    "total_price_display": "Total Price",
     "update": "Update",
     "close": "Close",
     "action": "Action",
+    "confirmDelete": "Delete Request",
     "cancel_confirm_msg": "Are you sure you want to cancel this request?",
     "confirm": "Confirm",
-    "success_update": "Request updated successfully!",
+    "success_update": "Material collection request updated successfully!",
     "fail_update": "Failed to update request",
     "success_cancel": "Request cancelled successfully!",
     "fail_cancel": "Failed to cancel request",
@@ -262,7 +263,7 @@
     "enter_pickup_address": "Enter address...",
     "no_address": "No address available",
     "note_placeholder": "Note (max 200 characters)",
-    "total_price_label": "Total price:",
+    "total_price_label": "Total price",
     "submit_button": "Submit Request",
     "reset_button": "Reset",
     "invalid_request_name": "Request name must only contain letters, numbers, and spaces!",
@@ -271,6 +272,7 @@
     "empty_quantity": "Quantity is required!",
     "empty_price": "Price is required!",
     "empty_address": "Address is required!",
+    "select_address": "Select pickup address",
     "create_success": "Material collection request created successfully!",
     "create_fail": "Failed to create request! Please try again.",
     "invalid_address": "Address must not contain special characters!",
@@ -325,8 +327,8 @@
     "see_more": "See More"
   },
   "provideRequest": {
-    "title": "Material Provide Requests",
-    "editTitle": "Update Provide Request",
+    "title": "MATERIAL PROVIDE REQUESTS",
+    "editTitle": "Update Material Provide Request",
     "confirmDelete": "Delete Request",
     "deleteConfirmMessage": "Are you sure you want to delete this request?",
     "delete_success": "Request has been deleted!",
@@ -334,7 +336,7 @@
     "update_success": "Update successful!",
     "update_fail": "Update failed!",
     "quantityRemain": "Remaining quantity:",
-    "request_name": "Request",
+    "request_name": "Request Name",
     "quantity_kg": "Quantity (Kg)",
     "unit_price": "Price per unit (VND/Kg)",
     "total_price": "Total Price (VND)",
